1번 문제 추가

--- a/question/1.html
+++ b/question/1.html
@@ -7,6 +7,24 @@
 </head>
 <body>
     <script>
+        /*
+        *   Q. 암호를 해독하라!
+        *   섬으로 향하라!
+
+                '   + -- + - + -   '
+                '   + --- + - +   '
+                '   + -- + - + -   '
+                '   + - + - + - +   '
+
+                해(**1**)와 달(**0**),
+                Code의 세상 안으로!(**En-Coding**)
+
+                ※ 출력은 문자열로
+        *
+        *
+        *
+        * */
+
         let data = [
             '   + -- + - + -   ',
             '   + --- + - +   ',
